# users_workspace

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
.github/: copilot-instructions.md
api/: Cargo.toml
api/src/: main.rs
api_types/: Cargo.toml
api_types/src/: error.rs  lib.rs  login.rs  mfa.rs  signup.rs  totp.rs
application/: Cargo.toml
application/src/: auth.rs  lib.rs
application/src/domain/: claims.rs  credential.rs  mod.rs  user.rs
application/src/port/: credential_repository.rs  for_auth_tokens.rs  for_totp.rs  hsm_store.rs  mod.rs  repository_error.rs  user_repository.rs
auth/: Cargo.toml
auth/src/: component.rs  lib.rs
auth/src/entities/: claims.rs  mod.rs  totp.rs  user.rs
auth/src/infra/: mod.rs
auth/src/infra/jwt_auth_tokens/: mod.rs  read_key.rs  read_public.rs
auth/src/infra/memory/: hsm_store.rs  mod.rs  user_repository.rs
auth/src/infra/totp/: mod.rs
auth/src/ports/: for_auth_tokens.rs  for_totp.rs  hsm_store.rs  mod.rs  user_repository.rs
auth/src/usecases/: finish_passkey_authentication.rs  finish_passkey_registration.rs  finish_totp_registration.rs  get_jwks.rs  get_mfa_registration.rs  login.rs  mod.rs  signup.rs  start_passkey_authentication.rs  start_passkey_registration.rs  start_totp_registration.rs
console/: Cargo.toml
console/src/: main.rs
contracts/: Cargo.toml
contracts/src/auth/: component.rs  error.rs  login.rs  mfa.rs  mod.rs  passkey.rs  signup.rs  totp.rs
jwt_auth_tokens/: Cargo.toml
jwt_auth_tokens/src/: lib.rs  read_key.rs  read_public.rs
memory/: Cargo.toml
memory/src/: hsm_store.rs  lib.rs
memory/src/repository/: credential.rs  user.rs
totp/: Cargo.toml
totp/src/: lib.rs
ui/: Cargo.toml  index.html  index.scss
ui/src/: app.rs  lib.rs  main.rs
ui/src/components/: auth_card.rs  mod.rs  protected_route.rs
ui/src/components/layout/: auth.rs  header.rs  main.rs  mod.rs
ui/src/components/ui/: auth_footer.rs  button.rs  darkmode_toggle.rs  input_field.rs  loading_spinner.rs  mod.rs  server_error.rs  totp_manual_key.rs  totp_step.rs
ui/src/context/: theme.rs  user.rs
ui/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  signup.rs  totp.rs  webauthn_register.rs
ui/src/services/: auth.rs
ui/src/utils/: validator.rs
ui/styles/: _base.scss  _mixins.scss  _variables.scss  main.scss
ui/styles/components/: auth_card.scss
ui/styles/components/layout/: _auth.scss
ui/styles/components/ui/: _auth_footer.scss  _button.scss  _input.scss  _loading_spinner.scss  _server_error.scss  _toggle.scss  _totp_manual_key.scss  _totp_step.scss
ui/styles/pages/: _totp.scss  _webauthn_register.scss  totp.scss
