[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
api_types = { path = "../api_types" }
application = { path = "../application" }
env_logger = "0.11.8"
jwt_auth_tokens = { path = "../jwt_auth_tokens" }
memory = { path = "../memory" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
totp = { path = "../totp" }
webauthn-rs = { version ="0.5.3", features = ["danger-allow-state-serialisation"] }
log = "0.4.29"
