[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
actix-web-httpauth = "0.8.2"
api_types = { path = "../api_types" }
auth = { path = "../auth" }
contracts = { path = "../contracts" }
env_logger = "0.11.8"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
webauthn-rs = { version ="0.5.3", features = ["danger-allow-state-serialisation"] }
log = "0.4.29"
actix-web-validator = "7.0.0"
