[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bcrypt = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
webauthn-rs = { version ="0.5.3", features = ["danger-allow-state-serialisation"] }
log = "0.4.28"
