[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
contracts = { path = "../contracts" }
async-trait = "0.1.89"
base32 = "0.5.1"
base64ct = "1.8.0"
bcrypt = "0.18.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.29"
once_cell = "1.21.3"
pem = "3.0.6"
rand = "0.9.2"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
totp-rs = "5.7.0"
uuid = { version = "1.19.0", features = ["v4"] }
webauthn-rs = { version ="0.5.3", features = ["danger-allow-state-serialisation"] }
