[package]
name = "contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"] }
webauthn-rs = { version ="0.5.3", features = ["danger-allow-state-serialisation"] }
bcrypt = "0.18.0"
