[package]
name = "jwt_auth_tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand_core = "0.6.4"
application = { path = "../application" }
log = "0.4.28"
