[package]
name = "jwt_auth_tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand_core = "0.6.4"
application = { path = "../application" }
log = "0.4.28"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
pem = "3.0.6"
base64ct = "1.8.0"
