[package]
name = "jwt_auth_tokens"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
async-trait = "0.1.89"
base64ct = "1.8.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.29"
once_cell = "1.21.3"
pem = "3.0.6"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread"] }
