[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
api_types = { path = "../api_types" }
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.56"
web-sys = "0.3.83"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
